--- a/.env
+++ b/.env
@@ -39,11 +39,16 @@ MAILER_URL=
 CORS_ALLOW_ORIGIN=^http(s){0,1}?://(.)+(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
-CROSIERAPP_UUID=
-CROSIERAPP_ID=
+CROSIERAPP_UUID=05042f6e-31ad-4243-9a09-91524a762300
+CROSIERAPP_ID=crosierapprhcv
 CROSIERCORE_URL=
-
+CROSIERAPP_LOGINBYCORE=false
 
 GOOGLE_RECAPTCHA_SECRET=
-LINK_CONFIRM_EMAIL=
-SECURE_SCHEME=
+# Utilizado para o GOOGLE RECAPTCHA
+URL_SISTEMA=
+LINK_CONFIRM_EMAIL=https://cv.casabonsucesso.com.br/cvForm/confirmEmail
+SECURE_SCHEME=https
+
+
+DIR_FOTOS3x4=
