--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "ext-json": "*",
         "crosiersource/crosierlib-base": "*@dev",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
+        "google/recaptcha": "^1.2",
         "sensio/framework-extra-bundle": "^5.2",
+        "sensiolabs/security-checker": "^5.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
@@ -35,8 +37,7 @@
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
         "symfony/yaml": "4.2.*",
-        "vich/uploader-bundle": "^1.8",
-        "google/recaptcha": "^1.2"
+        "vich/uploader-bundle": "^1.9"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
