Atualizando para Symfony 4.3.5

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,9 +1,9 @@
 security:
     encoders:
         CrosierSource\CrosierLibBaseBundle\Entity\Security\User:
-            algorithm: bcrypt
+            algorithm: auto
         App\Entity\CV:
-            algorithm: bcrypt
+            algorithm: auto
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         app_user_provider:
