--- a/composer.json
+++ b/composer.json
@@ -9,42 +9,49 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "ext-bcmath": "^7.2",
+        "ext-bcmath": "*",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-zip": "*",
+        "ext-simplexml": "*",
         "crosiersource/crosierlib-base": "*@dev",
+        "dompdf/dompdf": "^0.8.3",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
-        "google/recaptcha": "^1.2",
         "sensio/framework-extra-bundle": "^5.2",
+        "nelmio/cors-bundle": "^1.5",
         "sensiolabs/security-checker": "^5.0",
-        "symfony/asset": "4.2.*",
-        "symfony/console": "4.2.*",
-        "symfony/dotenv": "4.2.*",
-        "symfony/expression-language": "4.2.*",
+        "symfony/asset": "^4.0",
+        "symfony/console": "^4.0",
+        "symfony/dotenv": "^4.0",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.1",
-        "symfony/form": "4.2.*",
-        "symfony/framework-bundle": "4.2.*",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/form": "^4.0",
+        "symfony/framework-bundle": "^4.0",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "*",
-        "symfony/process": "4.2.*",
-        "symfony/security-bundle": "4.2.*",
+        "symfony/process": "^4.0",
+        "symfony/security-bundle": "^4.0",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.2.*",
-        "symfony/twig-bundle": "4.2.*",
-        "symfony/validator": "4.2.*",
-        "symfony/web-link": "4.2.*",
-        "symfony/yaml": "4.2.*",
-        "vich/uploader-bundle": "^1.9"
+        "symfony/translation": "^4.0",
+        "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
+        "symfony/web-link": "^4.0",
+        "symfony/webpack-encore-bundle": "^1.0",
+        "symfony/yaml": "^4.0",
+        "twig/extensions": "^1.5",
+        "symfony/property-access": "^4.0",
+        "vich/uploader-bundle": "^1.10",
+        "google/recaptcha": "^1.2"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.2.*"
+        "symfony/test-pack": "*"
     },
     "config": {
         "preferred-install": {
@@ -89,7 +96,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.2.*"
+            "require": "4.3.*"
         }
     },
     "repositories": [
