--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_DEBUG=1
+APP_ENV=
+APP_DEBUG=
 APP_SECRET=
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
@@ -32,23 +32,35 @@ DATABASE_URL=mysql://crosier_dev:crosier_dev@localhost:3306/crosier_dev
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=
+#MAILER_URL=gmail://bonsucessomailer:'bm@Feliz001'@localhost
+MAILER_USERNAME=
+MAILER_PW=
 ###< symfony/swiftmailer-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^http(s){0,1}?://(.)+(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
-CROSIERAPP_UUID=05042f6e-31ad-4243-9a09-91524a762300
-CROSIERAPP_ID=crosierapprhcv
+CROSIER_MAINDOMAIN=
+CROSIER_SESSIONS_FOLDER=
+CROSIERCORE_APPSECRET=
+
+CROSIERAPP_UUID=
+CROSIERAPP_ID=
 CROSIERCORE_URL=
 CROSIERAPP_LOGINBYCORE=false
 
 GOOGLE_RECAPTCHA_SECRET=
 # Utilizado para o GOOGLE RECAPTCHA
 URL_SISTEMA=
-LINK_CONFIRM_EMAIL=https://cv.casabonsucesso.com.br/cvForm/confirmEmail
-SECURE_SCHEME=https
+LINK_CONFIRM_EMAIL=
+SECURE_SCHEME=
 
 
 DIR_FOTOS3x4=
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
