--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,11 +1,7 @@
 vich_uploader:
     db_driver: orm
 
-    mappings:
-        cv:
-            uri_prefix: /images/fotos3x4
-            upload_destination: '%kernel.project_dir%/public/images/fotos3x4'
-            namer: Vich\UploaderBundle\Naming\UniqidNamer
-            inject_on_load: false
-            delete_on_update: true
-            delete_on_remove: true
+    #mappings:
+    #    products:
+    #        uri_prefix: /images/products
+    #        upload_destination: '%kernel.project_dir%/public/images/products'
