--- a/package.json
+++ b/package.json
@@ -1,48 +1,21 @@
 {
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
+    "jquery": "3.4.1",
     "@symfony/webpack-encore": "^0.27.0",
-    "bootstrap": "^4.3.1",
     "copy-webpack-plugin": "^4.6.0",
-    "core-js": "3",
-    "datatables": "^1.10.18",
-    "datatables.net-bs4": "^1.10.19",
-    "daterangepicker": "^3.0.3",
-    "dropzone": "^5.5.1",
-    "flag-icon": "^2.5.0",
-    "flag-icon-css": "^3.2.1",
-    "fstream": "^1.0.12",
-    "jquery": "^3.4.0",
-    "jquery-mask-plugin": "^1.14.15",
-    "jquery-maskmoney": "https://github.com/plentz/jquery-maskmoney",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.13",
-    "lodash.merge": "^4.6.2",
-    "lodash.mergewith": "^4.6.2",
+    "webpack-notifier": "^1.7.0",
+    "bootstrap": "4.1.3",
     "moment": "^2.23.0",
-    "node-sass": "^4.11.0",
     "numeral": "^2.0.6",
-    "pace": "^0.0.4",
-    "pace-progress": "HubSpot/pace",
-    "perfect-scrollbar": "^1.4.0",
-    "popper.js": "^1.14.6",
-    "sass-loader": "^7.1.0",
-    "select2": "4",
-    "select2-bootstrap-theme": "^0.1.0-beta.10",
-    "simple-line-icons": "^2.4.1",
-    "sortablejs": "^1.8.1",
-    "sprintf-js": "^1.1.2",
-    "summernote": "^0.8.11",
     "toastr": "^2.1.4",
-    "webpack-notifier": "^1.7.0"
+    "dropzone": "^5.5.1"
   },
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
     "dev-server": "encore dev-server",
     "dev": "encore dev",
-    "watch": "encore dev --watch --watch-pool",
+    "watch": "encore dev --watch",
     "build": "encore production --progress"
-  },
-  "dependencies": {}
+  }
 }
