--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
         "copy-webpack-plugin": "^4.6.0",
         "datatables": "^1.10.18",
         "datatables.net-bs4": "^1.10.19",
+        "dropzone": "^5.5.1",
         "jquery": "^3.3.1",
         "jquery-mask-plugin": "^1.14.15",
         "jquery-maskmoney": "^3.0.2",
         "moment": "^2.23.0",
+        "node-sass": "^4.11.0",
         "numeral": "^2.0.6",
+        "sass-loader": "^7.1.0",
         "select2": "4",
         "select2-bootstrap-theme": "^0.1.0-beta.10",
         "sprintf-js": "^1.1.2",
-        "webpack-notifier": "^1.7.0",
-        "node-sass": "^4.11.0",
-        "sass-loader": "^7.1.0",
-        "dropzone": "^5.5.1",
-        "toastr": "^2.1.4"
+        "toastr": "^2.1.4",
+        "webpack-notifier": "^1.7.0"
     },
     "license": "UNLICENSED",
     "private": true,
