--- a/composer.json
+++ b/composer.json
@@ -1,109 +1,139 @@
 {
-    "name": "crosiersource/crosierapp-helloworld",
-    "type": "project",
-    "description": "CrosierApp de exemplos",
-    "homepage": "https://www.crosier.com.br",
-    "license": "MIT",
-    "authors": [
-        {"name": "Carlos Eduardo Pauluk", "email": "carlospauluk@gmail.com"}
+  "name": "crosiersource/crosierapp-rhcv",
+  "type": "project",
+  "description": "crosierapp-rhcvZ",
+  "homepage": "https://www.crosier.com.br",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Carlos Eduardo Pauluk",
+      "email": "carlospauluk@gmail.com"
+    }
+  ],
+  "require": {
+    "php": "7.4.*",
+    "ext-bcmath": "*",
+    "ext-ctype": "*",
+    "ext-curl": "*",
+    "ext-iconv": "*",
+    "ext-intl": "*",
+    "ext-json": "*",
+    "ext-simplexml": "*",
+    "ext-soap": "*",
+    "ext-zip": "*",
+    "ext-dom": "*",
+    "ext-zlib": "*",
+    "phpoffice/phpspreadsheet": "^1.9",
+    "dompdf/dompdf": "^0",
+    "friendsofsymfony/jsrouting-bundle": "^2.2",
+    "sensio/framework-extra-bundle": "^5.1",
+    "nelmio/cors-bundle": "2.0.*",
+    "symfony/asset": "5.1.*",
+    "symfony/console": "5.1.*",
+    "symfony/dotenv": "5.1.*",
+    "symfony/expression-language": "5.1.*",
+    "symfony/flex": "^1.3.1",
+    "symfony/form": "5.1.*",
+    "symfony/framework-bundle": "5.1.*",
+    "symfony/http-client": "5.1.*",
+    "symfony/intl": "5.1.*",
+    "symfony/mailer": "5.1.*",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/notifier": "5.1.*",
+    "symfony/orm-pack": "1.*",
+    "symfony/process": "5.1.*",
+    "symfony/property-access": "5.1.*",
+    "symfony/security-bundle": "5.1.*",
+    "symfony/security-csrf": "5.1.*",
+    "symfony/serializer-pack": "1.*",
+    "symfony/string": "5.1.*",
+    "symfony/swiftmailer-bundle": "^3.1",
+    "symfony/translation": "5.1.*",
+    "symfony/twig-bundle": "5.1.*",
+    "symfony/twig-pack": "1.*",
+    "symfony/validator": "5.1.*",
+    "symfony/web-link": "5.1.*",
+    "symfony/webpack-encore-bundle": "^1.0",
+    "symfony/yaml": "5.1.*",
+    "crosiersource/crosierlib-base": "@dev",
+    "crosiersource/crosierlib-radx": "@dev",
+    "symfony/web-profiler-bundle": "5.1.*",
+    "nfephp-org/sped-common": "^5.0",
+    "nfephp-org/sped-da": "^0",
+    "nfephp-org/sped-nfe": "^5.0",
+    "picqer/php-barcode-generator": "^0.3.0",
+    "econea/nusoap": "^0.9.7",
+    "knplabs/knp-snappy-bundle": "^1.7",
+    "vich/uploader-bundle": "^1.13",
+    "symfony/messenger": "5.1.*",
+    "google/recaptcha": "^1.2"
+  },
+  "require-dev": {
+    "symfony/debug-pack": "*",
+    "symfony/maker-bundle": "^1.0",
+    "symfony/profiler-pack": "*",
+    "symfony/test-pack": "*"
+  },
+  "config": {
+    "minimum-stability": "dev",
+    "prefer-stable": false
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "replace": {
+    "paragonie/random_compat": "2.*",
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php74": "*",
+    "symfony/polyfill-php73": "*",
+    "symfony/polyfill-php72": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
     ],
-    "require": {
-        "php": "^7.1.3",
-        "ext-bcmath": "*",
-        "ext-ctype": "*",
-        "ext-curl": "*",
-        "ext-iconv": "*",
-        "ext-intl": "*",
-        "ext-json": "*",
-        "ext-zip": "*",
-        "ext-simplexml": "*",
-        "crosiersource/crosierlib-base": "*@dev",
-        "dompdf/dompdf": "^0.8.3",
-        "friendsofsymfony/jsrouting-bundle": "^2.2",
-        "sensio/framework-extra-bundle": "^5.2",
-        "nelmio/cors-bundle": "^1.5",
-        "sensiolabs/security-checker": "^5.0",
-        "symfony/asset": "^4.0",
-        "symfony/console": "^4.0",
-        "symfony/dotenv": "^4.0",
-        "symfony/expression-language": "^4.0",
-        "symfony/flex": "^1.1",
-        "symfony/form": "^4.0",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/monolog-bundle": "^3.3",
-        "symfony/orm-pack": "*",
-        "symfony/process": "^4.0",
-        "symfony/security-bundle": "^4.0",
-        "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "^4.0",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/validator": "^4.0",
-        "symfony/web-link": "^4.0",
-        "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "^4.0",
-        "twig/extensions": "^1.5",
-        "symfony/property-access": "^4.0",
-        "vich/uploader-bundle": "^1.10",
-        "google/recaptcha": "^1.2"
-    },
-    "require-dev": {
-	"roave/security-advisories": "dev-master",
-        "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
-    },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check": "script"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "4.*"
-        }
-    },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../crosierlib-base"
-        }
+    "post-update-cmd": [
+      "@auto-scripts"
     ]
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "5.1.*"
+    }
+  },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../crosierlib-base/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "../crosierlib-radx/",
+      "options": {
+        "symlink": true
+      }
+    }
+  ]
 }
