--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "lodash": "^4.17.13",
     "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
-    "moment": "^2.23.0",
     "node-sass": "^4.11.0",
     "numeral": "^2.0.6",
     "pace": "^0.0.4",
@@ -44,5 +43,7 @@
     "watch": "encore dev --watch --watch-pool",
     "build": "encore production --progress"
   },
-  "dependencies": {}
+  "dependencies": {
+    "moment": "^2.29.1"
+  }
 }
