--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,14 +18,15 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        cvform_%env(CROSIERAPP_ID)%:
+
+        cvform:
             pattern: ^/cvForm
             provider: cvform_user_provider
             anonymous: true
 
             guard:
                 authenticators:
-                - App\Security\CVFormLoginAuthenticator
+                    - App\Security\CVFormLoginAuthenticator
 
             form_login:
                 login_path: cvForm_login
@@ -35,25 +36,37 @@ security:
                 path: cvForm_logout
 
             remember_me:
-                secret:   '%kernel.secret%'
+                secret: '%kernel.secret%'
                 lifetime: 172800 # 48 horas
 
         main_%env(CROSIERAPP_ID)%:
-            anonymous: true
             provider: app_user_provider
+            anonymous: ~
+
+            remember_me:
+                name: 'RMMBRM'
+                secret: "%env(CROSIERCORE_APPSECRET)%"
+                lifetime: 6048000 # 10 semanas
+                domain: "%env(CROSIER_MAINDOMAIN)%"
+                samesite: lax
+                httponly: false
 
             guard:
                 authenticators:
-                - App\Security\CrosierCoreAuthenticator
+                    - App\Security\CrosierCoreAuthenticator
+                    - App\Security\APIAuthenticator
+
+                # redirect anonymous users to the login page
+                entry_point: App\Security\CrosierCoreAuthenticator
 
             logout:
                 path: logout
 
-            remember_me:
-                secret:   '%kernel.secret%'
-                lifetime: 172800 # 48 horas
+
 
             switch_user: true
+
+
 
             # activate different ways to authenticate
 
